--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
     "replace": {
         "hellotypo3": "self.version",
         "typo3-ter/hellotypo3": "self.version"
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "hellotypo3"
+        }
     }
 }
